# email-triage-openenv

./: README.md  inference.py  openenv.yaml  pyproject.toml
server/: app.py
